[build-system]
requires = [
    "setuptools >=65.0",
    "wheel >=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "cartotb_satellite"
dynamic = ["version"]
readme = "readme.md"
license = {text = 'see license'}
description = "carto tb satellite images"
requires-python = ">=3.10"
dependencies = []
[[project.authors]]
name = "Mauro Faccin"
email = "mauro.fccn@gmail.com"


[project.scripts]
cartotb_satellite = "cartotb_satellite.cli:parse"

[project.optional-dependencies]
test = [
    "pytest >=6.2.5",
    "coverage >=6.1.1",
    "pytest-cov >=3.0.0",
]
dev = [
    "mypy >=0.910",
    "ruff >=0.0.98",
    "pre-commit >=2.17.0",
]

[project.urls]
Documentation = "https://maurofaccin.github.io/cartotb_satellite"

[tool.setuptools.dynamic]
version = {attr = "cartotb_satellite.__version__"}

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["D10"]
line-length = 88
target-version = "py310"
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]
