[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True

[options.packages.find]
include =
    cartotb_satellite
exclude =
    tests

[options.package_data]
python_project_template =
    py.typed
